--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -1,4 +1,5 @@
 .search{
+	width: 100%;
 	padding: 15px 28px;
 	background-image: linear-gradient(90deg,#0af,#0085ff);
 	.search_content{
@@ -23,4 +24,7 @@
 		background: url('./search.png') no-repeat center;
 		background-size: cover; 
 	}
+}
+.search_Box{
+	background-image: linear-gradient(90deg,#0af,#0085ff);
 }
