--- a/src/components/listItem/listItem.css
+++ b/src/components/listItem/listItem.css
@@ -5,7 +5,7 @@
 	background-color: #fff;
 	color: #666;
 	list-style: none;
-	font-size: .10px;
+	font-size: .20px;
 	.shoplist_img{
 		padding: 30px 20px;
 	}
@@ -28,7 +28,7 @@
 		height: 64px;
 		background-image: -webkit-linear-gradient(315deg,#26ce61,#26ce61 50%,transparent 0);
 		background-image: linear-gradient(135deg,#26ce61,#26ce61 50%,transparent 0);
-		font-size: 12px;
+		font-size: 24px;
 		span{
 			position: absolute;
 			top: 3px;
@@ -39,6 +39,9 @@
 			transform: rotate(-45deg) scale(.8);
 		}
 	}
+}
+.shoplist{
+	border-bottom: 1PX solid #f5efef;
 }
 .shoplist_main{
 	display: flex;
@@ -53,8 +56,8 @@
 	.line{
 		width: 100%;
 		margin: 15px 0;
-		height: 1px;
-		border-bottom: 1px solid #f5efef;
+		height: 1PX;
+		border-bottom: 1PX dotted #f5efef;
 	}
 	.show_money{
 		transform: scale(.9);
@@ -74,7 +77,7 @@
 	.show_line{
 		display: flex;
 		justify-content: space-between;
-		font-size: 10px;
+		font-size: 20px;
 		h3{
 			display: flex;
 			align-items: center;
@@ -93,18 +96,15 @@
 		.is_premium{
 			&::before{
 				content: "\54C1\724C";
-				margin-right: 10px;
+				margin-right: 8px;
 				padding: 0 5px;
-				width: 44px;
-				height: 30px;
-				line-height: 30px;
 				border-radius: 3px;
 				color: #6f3f15;
 				background-image: linear-gradient(-139deg,#fff100,#ffe339);
 				text-align: center;
 				white-space: nowrap;
 				font-weight: 700;
-				font-size: 10px;
+				font-size: 20px;
 			}
 		}
 		.show_time{
@@ -117,18 +117,14 @@
 		}
 		.show_kd{
 			display: flex;
-			width: 102px;
-			height: 30px;
-			padding: 0 1px;
+			padding:0 2px;
 			border-radius: 4px;
-			line-height: 24px;
 			border: 1px solid #44a5ff;
 			background-image: linear-gradient(45deg,#0085ff,#0af);
 			span{
 				color: #fff;
-				font-size: 10px;
+				font-size: 20px;
 				text-align: center;
-				transform: scale(0.8);
 			}
 		}
 		.show_rateWrap{
@@ -136,7 +132,7 @@
 			align-items: center;
 			transform: scale(.9);
 			.show_num{
-				font-size: 10px;
+				font-size: 20px;
 				margin-left:8px;
 			}
 		}
@@ -144,16 +140,14 @@
 	.show_supportWrap{
 		display: flex;
 		li{
-			font-size: 10px;
-			height: 36px;
-			width: 36px;
+			display: block;
+			margin-left: 4px;
+			font-size: 20px;
+			padding: 2px;
 			border-radius: 4px;
 			color: #999;
-			border:1px solid #ddd;
-			margin-left: 4px;
-			line-height: 36px;
+			border:1PX solid #ddd;
 			text-align: center;
-			transform: scale(0.8);
 		}
 	}
 }
