--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -17,6 +17,11 @@
 	.index_footer_a{
 		flex:1;
 		text-align: center;
+		a{
+			display: block;
+			width: 100%;
+			height: 100%;
+		}
 	}
 	.index_footer_icon{
 		width: 40px;
