--- a/public/index.css
+++ b/public/index.css
@@ -1,4 +1,5 @@
 *{padding: 0;margin: 0;list-style: none;text-decoration: none; -webkit-text-size-adjust: none;box-sizing: border-box; -webkit-font-smoothing: antialiased;font-family: 'Helvetica Neue',Tahoma,Arial,PingFangSC-Regular,'Hiragino Sans GB','Microsoft Yahei',sans-serif;}
+body{background-color: #f5f5f5;}
 h1, h2, h3, h4, h5, h6, p {
     font-weight: 400;
 }
