左右联动加动画

--- a/src/components/shopdetails/commodity/commodity.css
+++ b/src/components/shopdetails/commodity/commodity.css
@@ -42,7 +42,8 @@
 		}
 	}
 	.commodity_main{
-	width: 7.733333rem;
+		width: 7.733333rem;
+		position: relative;
 		height: 100%;
 		overflow-y: auto;
 		.commodity_main_menu{
