--- a/src/components/shopdetails/commodity/commodity.css
+++ b/src/components/shopdetails/commodity/commodity.css
@@ -159,6 +159,16 @@
 				position: absolute;
 				right: 0;
 				bottom: -.066667rem;
+				.food_add_box_s{
+					display: inline-block;
+					text-align: center;
+					color: #666;
+					vertical-align: middle;
+					font-size: .373333rem;
+					min-width: .4rem;
+					max-width: 2em;
+					overflow: hidden;
+				}
 				.food_add_box{
 					display: inline-block;
 					font-size: .346667rem;
@@ -214,6 +224,7 @@
 			img{
 				width: 100%;
 				border-radius: .053333rem;
+				font-size: 1px;
 			}
 		}
 	}
