--- a/src/components/index/returnTop/returnTop.css
+++ b/src/components/index/returnTop/returnTop.css
@@ -10,7 +10,7 @@
 	background: #fff;
 	border-radius: 50%;
 	background: #fff;
-	border:1PX solid #eee;
+	border:1PX solid #999;
 	transition: opacity .8s;
 	svg{
 		width: .533333rem;
