修改查询条件

--- a/src/components/shopdetails/tabs/tabs.css
+++ b/src/components/shopdetails/tabs/tabs.css
@@ -10,7 +10,7 @@
 	text-align: center;
 	font-size: .373333rem;
 	color: #666;
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1PX solid #ddd;
 	line-height: 1.066667rem;
 	.tabs_border_tag{
 		position: relative;
